# mesh_deform

Triangulations/: CMakeLists.txt  main-lnear.cpp  main.cpp
output/: disk36.msh  disk36_t10.msh  disk36_t100.msh  disk36_t110.msh  disk36_t120.msh  disk36_t130.msh  disk36_t140.msh  disk36_t150.msh  disk36_t160.msh  disk36_t170.msh  disk36_t180.msh  disk36_t190.msh  disk36_t20.msh  disk36_t200.msh  disk36_t30.msh  disk36_t40.msh  disk36_t50.msh  disk36_t60.msh  disk36_t70.msh  disk36_t80.msh  disk36_t90.msh  disk_P236.msh  disk_P236_t10.msh  disk_P236_t100.msh  disk_P236_t110.msh  disk_P236_t120.msh  disk_P236_t130.msh  disk_P236_t140.msh  disk_P236_t150.msh  disk_P236_t160.msh  disk_P236_t170.msh  disk_P236_t180.msh  disk_P236_t190.msh  disk_P236_t20.msh  disk_P236_t200.msh  disk_P236_t30.msh  disk_P236_t40.msh  disk_P236_t50.msh  disk_P236_t60.msh  disk_P236_t70.msh  (+2 more)
